Text alignment fixes

--- a/css/content.css
+++ b/css/content.css
@@ -589,7 +589,7 @@ developer.dol.gov
     color: #3d3d3d;
     font-size: 1em;
     margin-bottom: 1.25rem;
-    margin-left: .5em;
+    margin-left: .5em .25em;
     padding: .5em 1em;
     border: #3d3d3d solid 1px;
     border-radius: 8px;
